Fixed alignment in header

--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,6 @@ table img {
     width: 20px;
 }
 
-th {
-    font-weight: normal;
-}
-
 .offcanvas.offcanvas-end.width-offcanvas{ 
     width: 100%; 
 }
